# extract_embedding

./: README.md  pyproject.toml
extract_embedding/: __init__.py
